--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -12,6 +12,7 @@ At the moment, the following visualizations are available and we are continuousl
 - [KPI](/docs/visualizations-kpi--main)
 - [Line chart](/docs/visualizations-line-chart--main)
 - [Bar chart](/docs/visualizations-bar-chart--main)
+- [Donut chart](/docs/visualizations-donut-chart--main)
 
 The KPI component is available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
@@ -136,8 +137,10 @@ aq.fromJSON('{"Country":["Portugal","Spain"],"Population":[10.33,47.42]}');
 
 ## Axis types
 
-The `xAxis` and `yAxis` are by default of type `categorical` and `continuous`, respectively. These types must be updated if necessary depending on the data provided.
-The valid values are `continuous` for continuous data, `categorical` for discrete data, and `time` for continuous time data.
+Regarding the charts that rely on axes, the `xAxis` and `yAxis` are by default of type `categorical` and `continuous`, respectively.
+For horizontal bar charts, these default values are inverted.
+These types must be updated if necessary depending on the data provided. The valid values are `continuous` for continuous data, `categorical`
+for discrete data, and `time` for continuous time data.
 
 ## Visual roles
 
