refactor(Header): port to create classes

--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -54,6 +54,8 @@ const turquoiseTheme = createTheme({
     selectedItemBorderTopThickness: "0px",
     selectedItemBorderBottomColor: "transparent",
     selectedItemBorderBottomThickness: "0px",
+    selectedItemBorderRadius: theme.radii.full,
+    itemPadding: theme.space.xs,
   },
 });
 
