docs(storybook): upgrade to storybook@7
bumps storybook deps
fix stories.tsx default export
ESM exports
add viz styles decorator
lockfileVersion 3
use remark-gfm
docs: simplify styles
docs: fix styles & samples
docs: fix global & component styles
chore: bump @applitools/eyes-storybook

--- a/docs/foundation/Icons/Icons.stories.mdx
+++ b/docs/foundation/Icons/Icons.stories.mdx
@@ -1,10 +1,10 @@
-import { Meta, Story, Title } from "@storybook/addon-docs";
+import { Meta, Title, Unstyled } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 
 <Meta title="Foundation/Icons/Library" />
 
 <Title>Icon Library</Title>
 
-<Story name="Library">
+<Unstyled>
   <IconLibrary />
-</Story>
+</Unstyled>
