--- a/docs/overview/community/Contributing.stories.mdx
+++ b/docs/overview/community/Contributing.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from "@storybook/addon-docs";
-import Contributing from "../../../CONTRIBUTING.md";
+import { Markdown, Meta } from "@storybook/addon-docs";
+import Contributing from "../../../CONTRIBUTING.md?raw";
 
 <Meta title="Overview/Community/Contributing" />
 
-<Contributing />
+<Markdown>{Contributing}</Markdown>
