--- a/docs/overview/welcome/Welcome.stories.mdx
+++ b/docs/overview/welcome/Welcome.stories.mdx
@@ -1,6 +1,8 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Unstyled } from "@storybook/addon-docs";
 import Welcome from "./Welcome";
 
 <Meta title="Overview/Welcome" />
 
-<Welcome />
+<Unstyled>
+  <Welcome />
+</Unstyled>
