--- a/packages/core/src/components/Typography/Typography.stories.mdx
+++ b/packages/core/src/components/Typography/Typography.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas, Preview, Story } from "@storybook/addon-docs";
+import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { HvButton, HvTypography, HvTooltip } from "@core/components";
 import { PopUp } from "@hitachivantara/uikit-react-icons";
 
@@ -32,7 +32,7 @@ as its content, allowing the styling of the text inside with the help of the typ
 <HvTooltip title={<HvTypography>Open in new window</HvTypography>}>
 ```
 
-<Preview>
+<Canvas>
   <Story name="Usage">
     <HvTooltip title={<HvTypography>Open in new window</HvTypography>}>
       <HvButton icon aria-label="Popup" component="a" href="#">
@@ -40,7 +40,7 @@ as its content, allowing the styling of the text inside with the help of the typ
       </HvButton>
     </HvTooltip>
   </Story>
-</Preview>
+</Canvas>
 
 ## Variants
 
@@ -104,7 +104,7 @@ This is useful in situations where you want to have the same style applied to va
 In the following example, the style used for a ` display` typography is applied by default to an `h1` element.
 The typography can be applied to the same page, specifying a different variant, in this case an `h3`.
 
-<Preview>
+<Canvas>
   <Story name="Semantic">
     <HvTypography variant="display">
       The quick brown fox jumps over the lazy dog.
@@ -113,13 +113,13 @@ The typography can be applied to the same page, specifying a different variant, 
       The quick brown fox jumps over the lazy dog.
     </HvTypography>
   </Story>
-</Preview>
+</Canvas>
 
 ### Properties
 
 Any Typography variant can be complemented with styles for `link` and `disabled` states.
 
-<Preview>
+<Canvas>
   <Story name="Properties">
     <HvTypography variant="display" link>
       The quick brown fox jumps over the lazy dog.
@@ -134,4 +134,4 @@ Any Typography variant can be complemented with styles for `link` and `disabled`
       The quick brown fox jumps over the lazy dog.
     </HvTypography>
   </Story>
-</Preview>
+</Canvas>
