docs(storybook): upgrade to storybook@7
bumps storybook deps
fix stories.tsx default export
ESM exports
add viz styles decorator
lockfileVersion 3
use remark-gfm

--- a/docs/foundation/Icons/Icons.stories.mdx
+++ b/docs/foundation/Icons/Icons.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 
@@ -6,8 +6,8 @@ import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 
 # Icon Library
 
-<Preview>
+<Canvas>
   <Story name="Library">
     <IconLibrary />
   </Story>
-</Preview>
+</Canvas>
