--- a/docs/overview/changelogs/Core.stories.mdx
+++ b/docs/overview/changelogs/Core.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from "@storybook/addon-docs";
-import Changelog from "../../../packages/core/CHANGELOG.md";
+import { Description, Markdown, Meta } from "@storybook/addon-docs";
+import Changelog from "../../../packages/core/CHANGELOG.md?raw";
 
 <Meta title="Overview/Change Logs/Core" />
 
-<Changelog />
+<Markdown>{Changelog}</Markdown>
