--- a/docs/overview/changelogs/Icons.stories.mdx
+++ b/docs/overview/changelogs/Icons.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from "@storybook/addon-docs";
-import Changelog from "../../../packages/icons/CHANGELOG.md";
+import { Description, Markdown, Meta } from "@storybook/addon-docs";
+import Changelog from "../../../packages/icons/CHANGELOG.md?raw";
 
 <Meta title="Overview/Change Logs/Icons" />
 
-<Changelog />
+<Markdown>{Changelog}</Markdown>
