--- a/packages/core/src/components/Table/stories/TableSamples/TableSamples.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/TableSamples.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { CompleteStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples" />
+<Meta title="Guides/Table/Table Samples/Complete Table" />
 
 # Complete Table
 
