docs: simplify styles
docs: fix styles & samples

docs: fix global & component styles

--- a/docs/foundation/Icons/Icons.stories.mdx
+++ b/docs/foundation/Icons/Icons.stories.mdx
@@ -1,13 +1,11 @@
-import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Meta, Story, Title, Unstyled } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 
-<Meta title="Foundation/Icons" />
+<Meta title="Foundation/Icons/Library" />
 
-# Icon Library
+<Title>Icon Library</Title>
 
-<Canvas>
-  <Story name="Library">
-    <IconLibrary />
-  </Story>
-</Canvas>
+<Unstyled>
+  <IconLibrary />
+</Unstyled>
