docs(storybook): theming & sample improvements
- prepare for storybook@7 upgrade
  - migrate stuff that breaks in v7
  - leverage SB theming capabilities

--- a/docs/foundation/Icons/Icons.stories.mdx
+++ b/docs/foundation/Icons/Icons.stories.mdx
@@ -1,13 +1,10 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs";
+import { Meta, Story, Title } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
-import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 
-<Meta title="Foundation/Icons" />
+<Meta title="Foundation/Icons/Library" />
 
-# Icon Library
+<Title>Icon Library</Title>
 
-<Preview>
-  <Story name="Library">
-    <IconLibrary />
-  </Story>
-</Preview>
+<Story name="Library">
+  <IconLibrary />
+</Story>
