--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas } from "@storybook/addon-docs";
+import { Meta } from "@storybook/addon-docs";
 import { WhiteLabeling } from "./WhiteLabeling";
 
 <Meta title="Guides/Theming/White Labeling" />
