--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -13,6 +13,7 @@ At the moment, the following visualizations are available and we are continuousl
 - [Line chart](/docs/visualizations-line-chart--main)
 - [Bar chart](/docs/visualizations-bar-chart--main)
 - [Donut chart](/docs/visualizations-donut-chart--main)
+- [Confusion matrix](/docs/visualizations-confusion-matrix--main)
 
 The KPI component is available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
