chore: pa11y config updated to test tables

--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -10,12 +10,13 @@ The NEXT UI Kit offers a set of visualizations that enables you to visual displa
 At the moment, the following visualizations are available and we are continuously working on expanding the selection we offer:
 
 - [KPI](/docs/visualizations-kpi--main)
+- [Table](/docs/visualizations-table--main)
 - [Line chart](/docs/visualizations-line-chart--main)
 - [Bar chart](/docs/visualizations-bar-chart--main)
 - [Donut chart](/docs/visualizations-donut-chart--main)
 - [Confusion matrix](/docs/visualizations-confusion-matrix--main)
 
-The KPI component is available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
+The KPI and Table components are available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
 All the information below is only applicable to the visualizations from the `uikit-react-viz` package.
 
