--- a/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { UseHvHooksStory } from "./TableHooks.stories";
 
-<Meta title="Guides/Table/Table Hooks" />
+<Meta title="Visualizations/Table/Table Hooks" />
 
 # Table Hooks
 
