--- a/packages/core/src/components/Table/stories/TableHooks/UseHvBulkActions.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvBulkActions.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { UseHvBulkActionsStory } from "./TableHooks.stories";
 
-<Meta title="Guides/Table/Table Hooks/Hooks/useHvBulkActions" />
+<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvBulkActions" />
 
 # useHvBulkActions
 
