--- a/packages/core/src/components/Table/stories/TableHooks/UseHvHeaderGroups.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvHeaderGroups.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { UseHvHeaderGroupsStory } from "./TableHooks.stories";
 
-<Meta title="Guides/Table/Table Hooks/Hooks/useHvHeaderGroups" />
+<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvHeaderGroups" />
 
 # useHvHeaderGroups
 
