--- a/packages/core/src/components/Table/stories/TableHooks/UseHvRowSelection.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvRowSelection.stories.mdx
@@ -4,7 +4,7 @@ import {
   UseHvSelectionControlledStory,
 } from "./TableHooks.stories";
 
-<Meta title="Guides/Table/Table Hooks/Hooks/useHvRowSelection" />
+<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvRowSelection" />
 
 # useHvRowSelection
 
