--- a/packages/core/src/components/Table/stories/TableRenderers/NumberColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/NumberColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { NumberColumnRendererStory } from "./TableRenderers.stories";
 
-<Meta title="Guides/Table/Table Renderers/Renderers/Number Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Renderers/Number Column Renderer" />
 
 # Number Column Renderer
 
