--- a/packages/core/src/components/Table/stories/TableRenderers/TableRenderers.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/TableRenderers.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { AllColumnRenderersStory } from "./TableRenderers.stories";
 
-<Meta title="Guides/Table/Table Renderers" />
+<Meta title="Visualizations/Table/Table Renderers" />
 
 # Table Renderers
 
