--- a/packages/core/src/components/Table/stories/TableRenderers/TextColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/TextColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { TextColumnRendererStory } from "./TableRenderers.stories";
 
-<Meta title="Guides/Table/Table Renderers/Renderers/Text Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Renderers/Text Column Renderer" />
 
 # Text Column Renderer
 
