--- a/packages/core/src/components/Table/stories/TableSamples/AlternativeLayout.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/AlternativeLayout.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { AlternativeLayoutStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples/Alternative Layout" />
+<Meta title="Visualizations/Table/Table Samples/Alternative Layout" />
 
 # Alternative Layout
 
