--- a/packages/core/src/components/Table/stories/TableHooks/UseHvRowExpand.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvRowExpand.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { UseHvRowExpandStory } from "./TableHooks.stories";
 
-<Meta title="Guides/Table/Table Hooks/Hooks/useHvRowExpand" />
+<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvRowExpand" />
 
 # useHvRowExpand
 
