--- a/packages/core/src/components/Table/stories/TableRenderers/ExpandColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/ExpandColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { ExpandColumnRendererStory } from "./TableRenderers.stories";
 
-<Meta title="Guides/Table/Table Renderers/Renderers/Expand Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Renderers/Expand Column Renderer" />
 
 # Expand Column Renderer
 
