--- a/packages/core/src/components/Table/stories/TableRenderers/ProgressColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/ProgressColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { ProgressColumnRendererStory } from "./TableRenderers.stories";
 
-<Meta title="Guides/Table/Table Renderers/Renderers/Progress Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Renderers/Progress Column Renderer" />
 
 # Progress Column Renderer
 
