--- a/packages/core/src/components/Table/stories/TableSamples/ColumnResize.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/ColumnResize.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { ColumnResizeStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples/Column Resize" />
+<Meta title="Visualizations/Table/Table Samples/Column Resize" />
 
 # Column Resize
 
