--- a/packages/core/src/components/Table/stories/TableSamples/EmptyCells.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/EmptyCells.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { EmptyCellsStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples/Empty Cells" />
+<Meta title="Visualizations/Table/Table Samples/Empty Cells" />
 
 # Empty Cells
 
