--- a/packages/core/src/components/Table/stories/TableSamples/LockedSelection.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/LockedSelection.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { LockedSelectionStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples/Locked Selection" />
+<Meta title="Visualizations/Table/Table Samples/Locked Selection" />
 
 # Locked Selection
 
