--- a/packages/core/src/components/Table/stories/TableSamples/ServerSide.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/ServerSide.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { ServerSideStory } from "./TableSamples.stories";
 
-<Meta title="Guides/Table/Table Samples/Server Side" />
+<Meta title="Visualizations/Table/Table Samples/Server Side" />
 
 # Server Side
 
