--- a/packages/core/src/components/Table/stories/TableHooks/AlternativeLayout.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/AlternativeLayout.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { AlternativeLayoutStory } from "./TableSamples.stories";
+import { AlternativeLayoutStory } from "../TableSamples/TableSamples.stories";
 
-<Meta title="Visualizations/Table/Table Samples/Alternative Layout" />
+<Meta title="Visualizations/Table/Table Hooks/Alternative Layout" />
 
 # Alternative Layout
 
