--- a/packages/core/src/components/Table/stories/TableHooks/ColumnResize.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/ColumnResize.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { ColumnResizeStory } from "./TableSamples.stories";
+import { ColumnResizeStory } from "../TableSamples/TableSamples.stories";
 
-<Meta title="Visualizations/Table/Table Samples/Column Resize" />
+<Meta title="Visualizations/Table/Table Hooks/Column Resize" />
 
 # Column Resize
 
