docs: sb7 fixes

--- a/docs/templates/Templates.stories.mdx
+++ b/docs/templates/Templates.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Unstyled } from "@storybook/addon-docs";
 import { TemplateItems } from "./TemplateItem";
 
 <Meta title="Templates/Overview" />
@@ -7,4 +7,6 @@ import { TemplateItems } from "./TemplateItem";
 
 The UI Kit templates correspond to Design System patterns that consist on the composition of components to build common use cases on the Hitachi Vantara products.
 
-<TemplateItems />
+<Unstyled>
+  <TemplateItems />
+</Unstyled>
