--- a/packages/core/src/components/Table/stories/TableHooks/UseHvPagination.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvPagination.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvPaginationStory } from "./TableHooks.stories";
+import { UseHvPaginationStory } from "./TableHooks";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvPagination" />
+<Meta title="Visualizations/Table/Table Hooks/useHvPagination" />
 
 # useHvPagination
 
