--- a/packages/core/src/components/Table/stories/TableHooks/UseHvRowSelection.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvRowSelection.stories.mdx
@@ -2,10 +2,10 @@ import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import {
   UseHvSelectionStory,
   UseHvSelectionControlledStory,
-} from "./TableHooks.stories";
-import { LockedSelectionStory } from "../TableSamples/TableSamples.stories";
+} from "./TableHooks";
+import { LockedSelectionStory } from "../TableSamples/TableSamples";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvRowSelection" />
+<Meta title="Visualizations/Table/Table Hooks/useHvRowSelection" />
 
 # useHvRowSelection
 
