--- a/packages/core/src/components/Table/stories/TableHooks/UseHvTableSticky.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvTableSticky.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvTableStickyStory } from "./TableHooks.stories";
+import { UseHvTableStickyStory } from "./TableHooks";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvTableSticky" />
+<Meta title="Visualizations/Table/Table Hooks/useHvTableSticky" />
 
 # useHvTableSticky
 
