--- a/packages/core/src/components/Table/stories/TableRenderers/DropdownColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/DropdownColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { DropdownColumnRendererStory } from "./TableRenderers.stories";
+import { DropdownColumnRendererStory } from "./TableRenderers";
 
-<Meta title="Visualizations/Table/Table Renderers/Renderers/Dropdown Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Dropdown Column Renderer" />
 
 # Dropdown Column Renderer
 
