--- a/packages/core/src/components/Table/stories/TableRenderers/TableRenderers.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/TableRenderers.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { AllColumnRenderersStory } from "./TableRenderers.stories";
+import { AllColumnRenderersStory } from "./TableRenderers";
 
 <Meta title="Visualizations/Table/Table Renderers" />
 
