--- a/packages/core/src/components/Table/stories/TableRenderers/TagColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/TagColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { TagColumnRendererStory } from "./TableRenderers.stories";
+import { TagColumnRendererStory } from "./TableRenderers";
 
-<Meta title="Visualizations/Table/Table Renderers/Renderers/Tag Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Tag Column Renderer" />
 
 # Tag Column Renderer
 
