--- a/packages/core/src/components/Table/stories/TableSamples/TableSamples.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableSamples/TableSamples.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { CompleteStory } from "./TableSamples.stories";
+import { CompleteStory } from "./TableSamples";
 
-<Meta title="Visualizations/Table" />
+<Meta title="Visualizations/Table/Complete Table" />
 
 # Complete Table
 
