--- a/packages/core/src/components/Table/stories/TableHooks/AlternativeLayout.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/AlternativeLayout.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { AlternativeLayoutStory } from "../TableSamples/TableSamples.stories";
+import { AlternativeLayoutStory } from "../TableSamples/TableSamples";
 
 <Meta title="Visualizations/Table/Table Hooks/Alternative Layout" />
 
