--- a/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/TableHooks.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvHooksStory } from "./TableHooks.stories";
+import { UseHvHooksStory } from "./TableHooks";
 
 <Meta title="Visualizations/Table/Table Hooks" />
 
