--- a/packages/core/src/components/Table/stories/TableHooks/UseHvGroupBy.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvGroupBy.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvGroupByStory } from "./TableHooks.stories";
+import { UseHvGroupByStory } from "./TableHooks";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvGroupBy" />
+<Meta title="Visualizations/Table/Table Hooks/useHvGroupBy" />
 
 # useHvGroupBy
 
