--- a/packages/core/src/components/Table/stories/TableHooks/UseHvRowExpand.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvRowExpand.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvRowExpandStory } from "./TableHooks.stories";
+import { UseHvRowExpandStory } from "./TableHooks";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvRowExpand" />
+<Meta title="Visualizations/Table/Table Hooks/useHvRowExpand" />
 
 # useHvRowExpand
 
