--- a/packages/core/src/components/Table/stories/TableHooks/UseHvSortBy.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableHooks/UseHvSortBy.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvSortByStory } from "./TableHooks.stories";
+import { UseHvSortByStory } from "./TableHooks";
 
-<Meta title="Visualizations/Table/Table Hooks/Hooks/useHvSortBy" />
+<Meta title="Visualizations/Table/Table Hooks/useHvSortBy" />
 
 # useHvSortBy
 
