--- a/packages/core/src/components/Table/stories/TableRenderers/DateColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/DateColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { DateColumnRendererStory } from "./TableRenderers.stories";
+import { DateColumnRendererStory } from "./TableRenderers";
 
-<Meta title="Visualizations/Table/Table Renderers/Renderers/Date Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Date Column Renderer" />
 
 # Date Column Renderer
 
