--- a/packages/core/src/components/Table/stories/TableRenderers/SwitchColumnRenderer.stories.mdx
+++ b/packages/core/src/components/Table/stories/TableRenderers/SwitchColumnRenderer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { SwitchColumnRendererStory } from "./TableRenderers.stories";
+import { SwitchColumnRendererStory } from "./TableRenderers";
 
-<Meta title="Visualizations/Table/Table Renderers/Renderers/Switch Column Renderer" />
+<Meta title="Visualizations/Table/Table Renderers/Switch Column Renderer" />
 
 # Switch Column Renderer
 
