fix: wrong urls in migration docs

--- a/docs/overview/migration/MigrationV3.stories.mdx
+++ b/docs/overview/migration/MigrationV3.stories.mdx
@@ -258,7 +258,7 @@ Some components have been been adapted to work as a form element to ensure consi
 Components that follows this API will possess the following props:
 
 - `label` renders an HvLabel to identify the element
-- `name` Name of the form element for accesibility
+- `name` Name of the form element for accessibility
 - `status` the current status of the element used to trigger validation messages
 - `statusMessage` the message show when the `status` prop is invalid
 - `value` the current value of the element if declared the element starts behaving as a controlled component.
@@ -327,7 +327,7 @@ The `selectDefault` prop was removed
 ### Loading
 
 Loading is now visible by default. To hide it, use `hidden` prop.
-Removed option to pass `children` and use component as a wrapper "HOC". We still provide a [sample](http://lumada-design.github.io/uikit/master/?path=/docs/components-loading--main#with-children) of an `HvLoading` wrapping a component.
+Removed option to pass `children` and use component as a wrapper "HOC". We still provide a [sample](https://lumada-design.github.io/uikit/v3.x/?path=/docs/feedback-loading--main#with-children) of an `HvLoading` wrapping a component.
 
 - `text` renamed to `label`
 - `isActive` renamed to `hidden`, and is not visible by default (`hidden=false`)
@@ -412,7 +412,7 @@ The `HvSearchbox` was removed to construct a searchbox use the `HvInput`.
 + />
 ```
 
-for more information check the searchbox [sample](https://lumada-design.github.io/uikit/master/?path=/docs/forms-search-box--main)
+for more information check the searchbox [sample](https://lumada-design.github.io/uikit/v3.x/?path=/docs/inputs-search-box--main)
 
 ### Switch
 
@@ -440,8 +440,8 @@ The Switch is now a form element. Check [Form Element](#formelement) for more in
 - `disabled` class removed.
 - `icon` class removed.
 
-- `animated` removed animated icons should be implemented externally check [sample](https://lumada-design.github.io/uikit/master/?path=/docs/components-toggle-button--main#animated)
-- `labels` removed, apply the accessibility labels directly, check the toggleButton [sample](https://lumada-design.github.io/uikit/master/?path=/docs/components-toggle-button--main)
+- `animated` removed animated icons should be implemented externally check [sample](https://lumada-design.github.io/uikit/v3.x/?path=/docs/inputs-toggle-button--main#animated)
+- `labels` removed, apply the accessibility labels directly, check the toggleButton [sample](https://lumada-design.github.io/uikit/v3.x/?path=/docs/inputs-toggle-button--main)
 
 ### TextArea
 
