--- a/docs/overview/migration/MigrationV4.stories.mdx
+++ b/docs/overview/migration/MigrationV4.stories.mdx
@@ -138,7 +138,7 @@ If you need to scope the CSS to avoid styling conflicts, you can set this prop t
 
 If you are providing the baseline styles, you can set this prop to `false`.
 
-Check [CSS Baseline](http://localhost:9001/?path=/docs/theme-css-baseline--page) for more information.
+Check [CSS Baseline](https://lumada-design.github.io/uikit/v4.x/?path=/docs/guides-styling-css-baseline--page) for more information.
 
 ### Promoted components (lab > core):
 
