feat(Flow): add empty state support

--- a/packages/lab/src/components/Flow/stories/Usage.stories.mdx
+++ b/packages/lab/src/components/Flow/stories/Usage.stories.mdx
@@ -18,6 +18,7 @@ Summary:
     - [Background](#background)
     - [Controls](#controls)
     - [Minimap](#minimap)
+    - [Empty State](#empty-state)
   - [Custom nodes and node types](#custom-nodes-and-node-types)
   - [Inputs and Outputs](#inputs-and-outputs)
   - [Parameters](#parameters)
@@ -116,6 +117,11 @@ documentation](./?path=/docs/lab-flow--docs) for the `HvFlowControls` component 
 ### Minimap <a id="minimap" />
 
 To add the minimap of the flow, just add the `<HvFlowMinimap />` component as a child of the `HvFlow` component.
+
+### Empty State <a id="#empty-state" />
+
+To add an empty state panel, you can add the `<HvFlowEmpty />` component as a child of the `HvFlow` component. This wraps UI Kit's `HvEmptyState`
+component and shares the same interface.
 
 ## Custom nodes and node types <a id="custom-nodes-and-node-types" />
 
