--- a/packages/lab/src/components/Flow/stories/Usage.stories.mdx
+++ b/packages/lab/src/components/Flow/stories/Usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
 
-<Meta title="Guides/Flow" />
+<Meta title="Lab/Flow/Usage" />
 
 # Creating flows <a id="creating-flows" />
 
@@ -223,7 +223,8 @@ type HvFlowNodeOutput = {
 You'll notice that input nodes have an `accepts` property and the output nodes have a `provides` property. These are used to limit
 how nodes connect to other nodes and as a descriptor of what a node provides or accepts. Thus, for example, if a node
 provides `"config"`, only nodes that accept this string will allow a connection from that node. While inputs can accept an array of strings,
-an output only provides one.
+an output only provides one. If, instead, you want a node input to accept outputs from any other node without restrictions,
+you only need to set the `accepts` property to an empty array or, alternatively, not setting the `accepts` at all.
 
 Furthermore, it's also possible to define the maximum number of connections allowed for a particular input and output. This enables you to limit
 the number of connections an input accepts as well as the number of connections an output can establish.
